force-app/main/default/objects/Form_Instance__c/Form_Instance__c.object-meta.xml
<CustomObject>
    <description>This &quot;join&quot; object connects an application/profile with a form that has been opened and possibly completed</description>
    <label>Form Instance</label>
    <nameField>
        <displayFormat>FI-{000000}</displayFormat>
        <label>Form Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>