force-app/main/default/objects/Form_Instance__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advisor (if any) to which this form instance is linked</description>
    <inlineHelpText>The advisor (if any) to which this form instance is linked</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>Advisor__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Form_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>