force-app/main/default/objects/Form_Instance__c/fields/Advisor_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advisor payment record (if any) linked to this form instance</description>
    <inlineHelpText>The advisor payment record (if any) linked to this form instance</inlineHelpText>
    <label>Advisor Payment</label>
    <referenceTo>Advisor_Payment__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Form_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>