force-app/main/default/objects/Form_Instance__c/fields/Advisor_Term__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advisor term (if any) to which this form instance is linked</description>
    <inlineHelpText>The advisor term (if any) to which this form instance is linked</inlineHelpText>
    <label>Advisor Term</label>
    <referenceTo>Advisor_Term__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Form_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>