force-app/main/default/objects/Form_Instance__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The assessment (if any) to which this form instance is linked</description>
    <inlineHelpText>The assessment (if any) to which this form instance is linked</inlineHelpText>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Form_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>