force-app/main/default/objects/Form_Instance__c/fields/Date_approved__c.field-meta.xml
<CustomField>
    <fullName>Date_approved__c</fullName>
    <description>The date (after date submitted) on which this form instance was approved</description>
    <inlineHelpText>The date (after date submitted) on which this form instance was approved</inlineHelpText>
    <label>Date approved</label>
    <type>Date</type>
</CustomField>