force-app/main/default/objects/Form_Instance__c/fields/Date_auto_reminders_paused__c.field-meta.xml
<CustomField>
    <fullName>Date_auto_reminders_paused__c</fullName>
    <description>The date on which sending auto-reminder and auto-overdue letters for this form was suspended. Note that such letters are also stopped when the form instance is no longer pending.</description>
    <inlineHelpText>The date on which sending auto-reminder and auto-overdue letters for this form was suspended. Note that such letters are also stopped when the form instance is no longer pending.</inlineHelpText>
    <label>Date auto-reminders paused</label>
    <type>Date</type>
</CustomField>