force-app/main/default/objects/Form_Instance__c/fields/Date_created__c.field-meta.xml
<CustomField>
    <fullName>Date_created__c</fullName>
    <description>The date part of the created date/time</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date part of the created date/time</inlineHelpText>
    <label>Date created</label>
    <type>Date</type>
</CustomField>