force-app/main/default/objects/Form_Instance__c/fields/Date_due_override__c.field-meta.xml
<CustomField>
    <fullName>Date_due_override__c</fullName>
    <description>If non-blank, then will be used as the date due for this form instance, overriding any values from linked proposal, etc.</description>
    <inlineHelpText>If non-blank, then will be used as the date due for this form instance, overriding any values from linked proposal, etc.</inlineHelpText>
    <label>Date due override</label>
    <type>Date</type>
</CustomField>