force-app/main/default/objects/Form_Instance__c/fields/Date_form_closed__c.field-meta.xml
<CustomField>
    <fullName>Date_form_closed__c</fullName>
    <description>The date on which this form instance was closed by staff.  Note that the form instance can also be de facto closed if its linked profile/proposal is declined/withdrawn/closed.</description>
    <inlineHelpText>The date on which this form instance was closed by staff.  Note that the form instance can also be de facto closed if its linked profile/proposal is declined/withdrawn/closed.</inlineHelpText>
    <label>Date form closed</label>
    <type>Date</type>
</CustomField>