force-app/main/default/objects/Form_Instance__c/fields/Date_invalidated__c.field-meta.xml
<CustomField>
    <fullName>Date_invalidated__c</fullName>
    <description>The date on which this form instance was rendered invalid</description>
    <inlineHelpText>The date on which this form instance was rendered invalid</inlineHelpText>
    <label>Date invalidated</label>
    <type>Date</type>
</CustomField>