force-app/main/default/objects/Form_Instance__c/fields/Date_submit_enabled__c.field-meta.xml
<CustomField>
    <fullName>Date_submit_enabled__c</fullName>
    <description>The earliest date on which the applicant can submit this form instance.  If blank, then the form instance is always submittable.</description>
    <inlineHelpText>The earliest date on which the applicant can submit this form instance.  If blank, then the form instance is always submittable.</inlineHelpText>
    <label>Date submit enabled</label>
    <type>Date</type>
</CustomField>