force-app/main/default/objects/Form_Instance__c/fields/Days_submit_enabled_to_due__c.field-meta.xml
<CustomField>
    <fullName>Days_submit_enabled_to_due__c</fullName>
    <description>Number of days between date submit enabled and date due</description>
    <formula>IF(
 AND(
  NOT(ISBLANK( Date_due__c )),
  NOT(ISBLANK( Date_submit_enabled__c ))
 ),
 Date_due__c - Date_submit_enabled__c,
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between date submit enabled and date due</inlineHelpText>
    <label>Days submit enabled to due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>