force-app/main/default/objects/Form_Instance__c/fields/Diff_results__c.field-meta.xml
<CustomField>
    <fullName>Diff_results__c</fullName>
    <description>The results of comparing the form data of this form instance with the prior one from which form data was pre-populated. The diff is computed when this form instance is submitted.  The results are a list of component names whose values differ.</description>
    <inlineHelpText>The results of comparing the form data of this form instance with the prior one from which form data was pre-populated. The diff is computed when this form instance is submitted.  The results are a list of component names whose values differ.</inlineHelpText>
    <label>Diff results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>