force-app/main/default/objects/Form_Instance__c/fields/Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date__c</fullName>
    <description>Date on which this form instance expires (only applicable for certain forms). Used to &quot;force&quot; certain behavior on Online Apps.</description>
    <inlineHelpText>Date on which this form instance expires (only applicable for certain forms). Used to &quot;force&quot; certain behavior on Online Apps.</inlineHelpText>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>