force-app/main/default/objects/Form_Instance__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The form for this form instance</description>
    <inlineHelpText>The form for this form instance</inlineHelpText>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Application_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>