force-app/main/default/objects/Form_Instance__c/fields/Form_Phrase_pre_intro__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_pre_intro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If present, this text appears before the form intro (if any) at online apps</description>
    <inlineHelpText>If present, this text appears before the form intro (if any) at online apps</inlineHelpText>
    <label>Form Phrase pre-intro</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Form_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>