force-app/main/default/objects/Form_Instance__c/fields/GM_Data__c.field-meta.xml
<CustomField>
    <fullName>GM_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The GM Data record to which this form instance is linked</description>
    <inlineHelpText>The GM Data record to which this form instance is linked</inlineHelpText>
    <label>GM Data</label>
    <referenceTo>GM_Data__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Form_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>