force-app/main/default/objects/Form_Instance__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>The language at the time this record was last saved</description>
    <inlineHelpText>The language at the time this record was last saved</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>