force-app/main/default/objects/Form_Instance__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The milestone record (if any) linked to this form instance</description>
    <inlineHelpText>The milestone record (if any) linked to this form instance</inlineHelpText>
    <label>Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Form_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>