force-app/main/default/objects/Form_Instance__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment record (if any) linked to this form instance</description>
    <inlineHelpText>The payment record (if any) linked to this form instance</inlineHelpText>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Form_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>