force-app/main/default/objects/Form_Instance__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The restricted portfolio (if any) to which this eligibility form instance is linked</description>
    <inlineHelpText>The restricted portfolio (if any) to which this eligibility form instance is linked</inlineHelpText>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Form_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>