force-app/main/default/objects/Form_Instance__c/fields/Pre_populated_from__c.field-meta.xml
<CustomField>
    <fullName>Pre_populated_from__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The prior form instance from which this form instance&apos;s form data was pre-populated (if any)</description>
    <inlineHelpText>The prior form instance from which this form instance&apos;s form data was pre-populated (if any)</inlineHelpText>
    <label>Pre-populated from</label>
    <referenceTo>Form_Instance__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Form_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>