force-app/main/default/objects/Form_Instance__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The profile for this form instance</description>
    <inlineHelpText>The profile for this form instance</inlineHelpText>
    <label>Profile</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>Form Instances</relationshipLabel>
    <relationshipName>Form_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>