force-app/main/default/objects/Form_Instance__c/fields/ProposalId__c.field-meta.xml
<CustomField>
    <fullName>ProposalId__c</fullName>
    <description>Id of linked proposal (used for accessing data in Grants site).</description>
    <formula>Proposal__r.Id</formula>
    <inlineHelpText>Id of linked proposal (used for accessing data in Grants site).</inlineHelpText>
    <label>ProposalId</label>
    <type>Text</type>
</CustomField>