force-app/main/default/objects/Form_Instance__c/fields/Status_numeric__c.field-meta.xml
<CustomField>
    <fullName>Status_numeric__c</fullName>
    <description>Numeric representation of the status, for use in sorting at online apps</description>
    <formula>/* Note that all non-pending statuses have number 2 in order that form instance sorting works at online apps. */
IF(Status__c = &quot;Pending&quot;, 1, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Numeric representation of the status, for use in sorting at online apps</inlineHelpText>
    <label>Status numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>