force-app/main/default/objects/Form_Instance__c/validationRules/ApprovedButNotSubmitted.validationRule-meta.xml
<ValidationRule>
    <fullName>ApprovedButNotSubmitted</fullName>
    <active>true</active>
    <description>Date submitted must be non-blank if Date approved is non-blank</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Date_approved__c)),
 ISBLANK(Date_submitted__c)
)</errorConditionFormula>
    <errorMessage>Date submitted must be non-blank if Date approved is non-blank</errorMessage>
</ValidationRule>