force-app/main/default/objects/Form_Instance__c/validationRules/Date_submit_enabled_later_than_date_due.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_submit_enabled_later_than_date_due</fullName>
    <active>true</active>
    <description>The date submit enabled, if non-blank, must not be later than the date due.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Date_submit_enabled__c)),
 NOT(ISBLANK(Date_due__c)),
 Date_submit_enabled__c &gt; Date_due__c
)</errorConditionFormula>
    <errorMessage>The date submit enabled, if non-blank, must not be later than the date due.</errorMessage>
</ValidationRule>