force-app/main/default/objects/Form_Instance__c/validationRules/Missing_Form_link.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Form_link</fullName>
    <active>true</active>
    <description>A form instance record must have a non-blank Form link.</description>
    <errorConditionFormula>ISBLANK(Form__c)</errorConditionFormula>
    <errorDisplayField>Form__c</errorDisplayField>
    <errorMessage>A form instance record must have a non-blank Form link.</errorMessage>
</ValidationRule>