force-app/main/default/objects/Form_Instance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form__c</columns>
    <columns>Form_name__c</columns>
    <columns>Profile__c</columns>
    <columns>Proposal__c</columns>
    <columns>Number_of_errors__c</columns>
    <columns>Status__c</columns>
    <columns>Date_submitted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>