force-app/main/default/objects/Form_Instance__c/listViews/Submitted_apps.listView-meta.xml
<ListView>
    <fullName>Submitted_apps</fullName>
    <columns>NAME</columns>
    <columns>Form__c</columns>
    <columns>Proposal__c</columns>
    <columns>Language__c</columns>
    <columns>Number_of_errors__c</columns>
    <columns>Status__c</columns>
    <columns>Date_submitted__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_submitted__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Form_name__c</field>
        <operation>contains</operation>
        <value>application</value>
    </filters>
    <label>Submitted apps</label>
</ListView>