force-app/main/default/objects/Form_Instance__c/listViews/Submitted_forms.listView-meta.xml
<ListView>
    <fullName>Submitted_forms</fullName>
    <columns>NAME</columns>
    <columns>Form__c</columns>
    <columns>Proposal__c</columns>
    <columns>Language__c</columns>
    <columns>Number_of_errors__c</columns>
    <columns>Status__c</columns>
    <columns>Date_submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_submitted__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Submitted forms</label>
</ListView>